Brandwatch Careers - Data Product Manager. Tipico Product Manager (m/f/d) CRM | SmartRecruiters. Tipico Product Manager (m/f/d) Payments | SmartRecruiters. Job @ close2real (Berlin): Technical Product Owner... | JOIN. Job Application for Technical Product Manager at Capital on Tap.  AAK karriärer–Assistant Technical Product Manager. Reward Gateway - E-Commerce Product Manager. Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN. Cermati.com Product Manager (All Level) | SmartRecruiters. Job Application for Product Designer Manager at Graphisoft. Diversatek, Inc. Careers - Product Manager, Medical Devices. Divvy - Senior Product Designer. Job Application for Product Manager, Delivery at Marqeta. eFront - Product Owner - Paris or Belgrade. Endless - Sr. Product Designer. Endless - Product Designer. Tradesy - Product Designer. Liferay, Inc. Careers - Product Designer. Job Application for Product Manager  at CityBase. Job Application for Product Manager, Productivity & Domains (BA) at AppDirect. Symplicity - Senior Product Manager. Shopify - Product Manager. Funding Circle UK Careers - Senior Product Manager, Investor. Job Application for Senior Product Designer at Splash.     Product Manager at LoveCrafts .       Senior Product Owner - Tylko     . Senior Technical Product Manager, Sales and Support Platforms. BlackLine Careers - Staff Product Designer. BlackLine Careers - Principal Product Manager. Job Application for Senior Product Manager, API at GitHub. Job Application for Principal UX & Product Designer at Conductor. Job @ KI Group (Cologne): Product Owner | JOIN. Cloudability - Jobs: Senior Product Manager - Apply online. SkySlope - Jobs: Senior Product Manager - Apply online. Pegipegi - Jobs: Associate Product Manager - Apply online. Job Application for Senior Product Manager (Baltimore) at Ad Hoc. Job Application for Associate Product Manager at Guild Education. Product Manager - Cross Border Bill Pay - Western Union Careers. Job Application for Product

--- a/product-manager.html
+++ b/product-manager.html
@@ -40,12 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://close2real.join.com/jobs/255648-technical-product-owner-for-berlin-healthtech-startup-m-w-d'>Job @ close2real (Berlin): Technical Product Owner... | JOIN</a></h5> 
+<h5><a href='https://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/capitalontap/jobs/4354577002'>Job Application for Technical Product Manager at Capital on Tap</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tipico/743999692361344-product-manager-m-f-d-crm'>Tipico Product Manager (m/f/d) CRM | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Tipico/743999692361434-product-manager-m-f-d-payments'>Tipico Product Manager (m/f/d) Payments | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://close2real.join.com/jobs/255648-technical-product-owner-for-berlin-healthtech-startup-m-w-d'>Job @ close2real (Berlin): Technical Product Owner... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/capitalontap/jobs/4354577002'>Job Application for Technical Product Manager at Capital on Tap</a></h5> 
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/aak-se/job/oHnuafws'> AAK karri?rer?Assistant Technical Product Manager</a></h5> 
@@ -104,7 +116,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -112,7 +124,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/4d4865c6-5205-4661-ad9f-1e26e4028154'>Shopify - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/4d4865c6-5205-4661-ad9f-1e26e4028154'>Shopify - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -170,7 +182,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
-<h5><a href='https://pegipegi-dot-com.workable.com/j/6053F93353?viewed=true'>Pegipegi - Jobs: Associate Product Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pegipegi-dot-com.workable.com/j/6053F93353?viewed=true'>Pegipegi - Jobs: Associate Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Associate Product Manager at Pegipegi.</p>
 <hr/>
@@ -198,7 +210,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -228,7 +240,7 @@ processes.</p>
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -236,7 +248,7 @@ processes.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -365,7 +377,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/golucid/3c00239e-0aec-48df-837a-9354172beeb0'>Lucid - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/golucid/3c00239e-0aec-48df-837a-9354172beeb0'>Lucid - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -439,26 +451,13 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://consultport.join.com/jobs/255313-product-manager-intern-working-student-m-w'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
+<h5><a href='https://consultport.join.com/jobs/255313-product-manager-intern-working-student-m-w'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=ohSh9fwj&__jvst=Employee&__jvsd=s72DfhwN&__jvsc=Twitter&bid=nyBuSKwK'>Schneider Electric NAM Careers - Sr. Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/gojek/40f69246-2821-4a01-a359-64b5b6bf3b02/apply'>GOJEK - Product Manager, Data Protection</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... Product Manager, Data Protection. Jakarta. Product ? Product Management. Full 
-Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
-<hr/>
-<h5><a href='https://widger-talent-llc.workable.com/j/B94E949F8D'>Widger Talent LLC - Jobs: ChromaDex - Product Manager - Apply online</a></h5> 
-<p><span class="badge badge-light">Los Angeles California, United States</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/heycar/jobs/4330861002'>Job Application for Senior Product Manager (m/f/d) at heycar</a></h5> 
-<p><span class="badge badge-light">Berlin</span></p>
-<p>Posted on: 2019-07-24</p>
 <hr/>
 
 
