Marketplace Data Analyst - ZALORA SEA - Career Page. Strategic Insight Junior Data Analyst | SmartRecruiters. Principal Biostatistician - PPD Careers. Massive Insights Statistician | SmartRecruiters. Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page. Progressive technology solutions Data Analyst | SmartRecruiters. Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers. Premise Health Careers - Member Health Management Data Analyst. Premier Research Careers - Senior Biostatistician. Premier Research Careers - Principal Biostatistical Programmer. Sr Statistical Programmer - Syneos Health Careers. The Climate Corporation Careers - Data Scientist - Statistics. O2E Brands - Data Analyst - O2E Brands. PSI CRO Senior Statistician | SmartRecruiters. PSI CRO Senior Statistician | SmartRecruiters. Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore. Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters. Analytics Developer-Data Analyst-21687/21688 #0238 job at Radiant Digital in Irving, TX, powered by JobScore. Revance Therapeutics, Inc. Careers - Senior Biostatistician. Veristat Careers - Manager of Statistical Programming. Octopus Data Analyst | SmartRecruiters. Crime Data Analyst I - ELSEVIER Careers. Job Application for Marketing Data Analyst at Airship. Job Application for Marketing Data Analyst at Airship. Quantitative Data Analyst and Liaison. Job Application for Product Data Analyst at Chainalysis. Bridge Partners Careers - Data Analyst. Advanced Technology Services, Mexico carreras - Data Analyst. Premier Research Careers - Senior Biostatistician.       Growth Hacker / Data analyst - Titik Pintar     . KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters. Data Analyst. Database Analyst II - Experian Careers. Premise Health Careers - Member Health Management Data Analyst. Job Application for Inbound Data Analyst at Clearwater Analyti

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -111,11 +111,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/analytics-developer-data-analyst-21687-21688-bJnpHMRS4r6ArBaKkRyNN8'>Analytics Developer-Data Analyst-21687/21688 #0238 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/analytics-developer-data-analyst-21687-21688-bJnpHMRS4r6ArBaKkRyNN8'>Analytics Developer-Data Analyst-21687/21688 #0238 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -176,7 +176,7 @@ American?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -221,7 +221,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
+<h5><a href='https://eurobank.workable.com/j/094CAC131F'>Eurobank Ergasias SA - Jobs: Data Governance Business Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Greece</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -246,11 +246,11 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
 Stuart.</p>
 <hr/>
-<h5><a href='https://telegraph.workable.com/j/0E9D1E888A?viewed=true'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://telegraph.workable.com/j/0E9D1E888A?viewed=true'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior Data Analyst, Product at The Telegraph.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://owlin.recruitee.com/o/data-analyst-parttime'>
+<h5><a href='https://owlin.recruitee.com/o/data-analyst-parttime'>
       Data analyst - part-time - Owlin
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -260,7 +260,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tileapp/65ad5af9-c330-4a41-8446-8ab69485db46'>Tile - Sales and Channel Marketing Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tileapp/65ad5af9-c330-4a41-8446-8ab69485db46'>Tile - Sales and Channel Marketing Data Analyst</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -272,7 +272,7 @@ Stuart.</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Analyst. Mumbai, Maharashtra. 3. Ad Sales ? Sales. Full time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -333,7 +333,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://abbvie.referrals.selectminds.com/jobs/manager-senior-manager-statistics-statistical-innovation-10724'>Manager/Senior Manager, Statistics (Statistical Innovation) - AbbVie Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/manager-senior-manager-statistics-statistical-innovation-10724'>Manager/Senior Manager, Statistics (Statistical Innovation) - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
