Job Application for Business Intelligence Analyst at letgo. Santander Consumer USA Careers - Associate, Business Intelligence & Reporting. Job Application for Analyst- Business Intelligence at Endurance International Group - India.       (Lead) Business Intelligence Manager (f/m/div) for a new finleap venture - FinLeap GmbH     . Enterprise Business Intelligence Manager. Job Application for Business Intelligence Analyst - LiveScore at LiveScore. Job Application for Business Intelligence Analyst at SumUp. HomeX - Business Intelligence Analyst. Proprioo Business intelligence analyst (H/F) | SmartRecruiters. Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC .... Business Intelligence Analyst - Apply online - Zengistics - Jobs. Verve - Jobs: Business Intelligence Analyst - Apply online. Business Intelligence Analyst - Fooda - Career Page. Business Intelligence Analyst - Shypple. IKEA Southeast Asia Business Intelligence Architect, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters. SEGA Europe Limited Careers - Business Intelligence Analyst. Job Application for Business Intelligence Lead at CB Insights. Job Application for Business Intelligence Analyst  at Wargaming CIS. Credit Karma - Staff Business Intelligence Analyst. Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore. Job Application for Director, Business Intelligence at Omaze. Datatonic - Jobs: Business Intelligence Consultant - Apply online. Jobs: Head of Business Intelligence ... - Verse Technologies Inc. LeoVegas.com Business Intelligence Engineer | SmartRecruiters. MediaCom Careers - Manager, Business Intelligence. Gameloft Junior Business Intelligence Analyst | SmartRecruiters. Business Intelligence Architect 2 (16062) | Sundial Software Career Opportunities. Santander Consumer USA Careers - Associate, Business Intelligence &amp; Reporting. Senior Business Intelligence Engineer in Armonk, New York .... Business Intelligence An

--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/letgo/jobs/1792118'>Job Application for Business Intelligence Analyst at letgo</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence & Reporting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -90,7 +94,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Business Intelligence Analyst at Zengistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
@@ -127,7 +131,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -135,7 +139,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
+<h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
@@ -197,11 +201,11 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -238,7 +242,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86'>iland Internet Solutions Corporation - Jobs: Enterprise Business Intelligence Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86'>iland Internet Solutions Corporation - Jobs: Enterprise Business Intelligence Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -269,7 +273,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='http://medirevv.applytojob.com/apply/ZsHCtDjuay/Business-Intelligence-Analyst-Iowa'>Business Intelligence Analyst - Iowa - MediRevv - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medirevv.applytojob.com/apply/ZsHCtDjuay/Business-Intelligence-Analyst-Iowa'>Business Intelligence Analyst - Iowa - MediRevv - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -306,7 +310,7 @@ one of the fastest growing fields within MediaCom and focuses on (1) providing?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
+<h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As you might already know, Business Intelligence teams analyse business data 
 and can identify the driving forces behind revenue growth. In other words, they?...</p>
@@ -468,10 +472,6 @@ We enjoy working on a product that helps millions of people find love and get a?
 <hr/>
 <h5><a href='http://jobs.jobvite.com/longos/job/oTGrafwU'>Longo's Careers - Business Intelligence (BI) Analyst - Supply Chain (6 Month Contract)</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-16</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/groupm-emea/job/o21yafwv'>GroupM EMEA Careers - Business Intelligence Product Manager</a></h5> 
-<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
 
